Prevent wrapping within a .base

--- a/src/katex.less
+++ b/src/katex.less
@@ -51,6 +51,7 @@
     .base {
         position: relative;
         display: inline-block;
+        white-space: nowrap;
     }
 
     .strut {
